--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 
     <servlet> 
         <servlet-name>FrontServlet</servlet-name> 
-        <servlet-class>front.FrontServlet</servlet-class>
+        <servlet-class>etu1812.framework.servlet.FrontServlet</servlet-class>
     </servlet>
 
     <servlet-mapping> 
